Bug 429176: :-moz-system-metric(windows-default-theme) should treat Royale and Zune the same as Luna, patch by Kai Liu <kliu.bugzilla.3c9f@mail.kailiu.com>, r+sr=roc, a=beltzner